test/negative/014_overload_ambiguous_xmodule.err
014_overload_ambiguous_xmodule.fx:8:9: error: ambiguous call of overloaded 'sqrt': the candidates overlap, but none is the most specific. Candidates:
 sqrt('t, {n: int}) -> <unknown> [generic: 't] @ 014_overload_ambiguous_xmodule.fx:7:1
 sqrt(double) -> double @ Math.fx:L:C
define/import a more specific overload, or use a module-qualified call (e.g. Module.sqrt(...)) to disambiguate

1 errors occured during type checking.
